# global_httpdns

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/guolei/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: linker.h  native-lib.cpp
app/src/main/java/andhook/lib/: AndHook.java
app/src/main/java/andhook/lib/xposed/: ClassUtils.java  XC_MethodHook.java
app/src/main/java/com/example/guolei/myapplication/: HttpDNS.java  HttpDnsProvider.java  MainActivity.java  MyApplication.java  OsInvokeHandler.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/guolei/myapplication/: ExampleUnitTest.java
dns_inject/: build.gradle
dns_inject/src/main/: AndroidManifest.xml
dns_inject/src/main/java/com/guolei/dns_inject/: DnsInterface.java  Inject.java  OsInvokeHandler.java
dns_inject/src/main/res/values/: strings.xml
fkcore/src/main/java/libcore/io/: Libcore.java  Os.java
gradle/wrapper/: gradle-wrapper.properties
